--- a/git_notes.org
+++ b/git_notes.org
@@ -8,20 +8,25 @@ projects (usually hosted on Github), so here I write down some notes.
 
 - click 'fork' button on the repo you want to contribute to
 - clone it locally to your machine
-- add upstream track for updates (example on 'pymca' repo)
+- add upstream track for updates (here example on 'pymca' repo)
 
-  : git remote add --track master vasole git://github.com/vasole/pymca.git
+  : git remote add --track master upstream git://github.com/vasole/pymca.git
 
 - to fetch and merge updates from the master original project
 
-  : git fetch vasole
-  : git merge vasole/master
+  : git fetch upstream
+  : git merge upstream/master
+
+- to show all remote repositories ('origin' is the forked one,
+  'upstream' is the original project):
+
+  : git remote -v
 
 - make a working branch and switch to it
 
   : git branch your_branch_name
   : git checkout your_branch_name
-  : git branch #(this will show all the branches and put * on working one)
+  : git branch -a #(this will show all the branches and put * on working one)
 
 - push your local changes to a remote branch
 
@@ -34,6 +39,9 @@ projects (usually hosted on Github), so here I write down some notes.
 *** Useful links
     - [[https://gun.io/blog/how-to-github-fork-branch-and-pull-request/][Tutorial at gun.io]]
     - [[http://stackoverflow.com/questions/14680711/how-to-do-a-github-pull-request][Pull request made easy at StackOverflow]]
+    - [[http://www.pontikis.net/blog/how-to-collaborate-on-github-open-source-projects][Workflow without branch]] 
+    - [[http://www.eqqon.com/index.php/Collaborative_Github_Workflow][Another collaborating workflow example]]
+
 
 ** Tips
 
