--- a/git/git_notes.org
+++ b/git/git_notes.org
@@ -64,6 +64,42 @@ I do not use Git so often to remember all the steps to contribute to open-source
  : git branch --delete your_branch_name      #locally
  : git push origin --delete your_branch_name #remotely
 
+
+*** Specific cases
+
+**** Fetch a given remote branch
+
+  : git checkout --track origin/daves_branch
+
+This is equivalent to:
+
+  : git checkout -b [branch] [remotename]/[branch]
+
+[https://stackoverflow.com/questions/9537392/git-fetch-remote-branch]
+
+**** Merge master into a feature branch
+
+Well explained here [https://stackoverflow.com/questions/16955980/git-merge-master-into-feature-branch].
+
+Case 1:
+
+: git checkout feature1
+: git checkout master
+
+Case 2: you do not want to have the commits from the bug fixes in your feature branch
+
+  : git checkout feature1
+  : git rebase master
+
+  # Manage all conflicts that arise. When you get to the commits with the
+  # bugfixes (already in master), git will say that there were no changes and
+  # that maybe they were already applied. You then continue the rebase (while
+  # skipping the commits already in master) with
+
+  : git rebase --skip
+
+See also: [https://github.com/nvie/gitflow]
+
 *** Useful links
     - [[https://gun.io/blog/how-to-github-fork-branch-and-pull-request/][Tutorial at gun.io]]
     - [[http://stackoverflow.com/questions/14680711/how-to-do-a-github-pull-request][Pull request made easy at StackOverflow]]
@@ -88,6 +124,13 @@ I do not use Git so often to remember all the steps to contribute to open-source
 
   : git push origin v1.4
 
+- Delete local tag
+
+  : git tag -d tag_name
+
+- Delete remote tag
+
+  : git tag --delete origin tag_name
 
 ** Howtos
 
